--- a/css/col.css
+++ b/css/col.css
@@ -13,6 +13,11 @@
     flex-flow: row wrap;
 }
 
+.column{
+    display: flex;
+    flex-flow: column;
+}
+
 .between{
     justify-content: space-between;
 }
