--- a/css/main.css
+++ b/css/main.css
@@ -67,8 +67,7 @@ body{
 
 .nav-link:hover{
     color: #56597a;
-    border-bottom: 3px solid #56597a;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .header-btn{
@@ -436,6 +435,3 @@ input{
     margin-bottom: 62px;
 }
 
-#footer{
-    margin-bottom: 10px;
-}
