--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,7 @@ body{
 
 .brand-link{
     display: none;
+    margin-top: 10px;
 }
 
 .item-blc{
@@ -173,6 +174,10 @@ body{
     padding-bottom: 23px;
 }
 
+.item-blc:hover .brand-link{
+    display: block;
+}
+
 .item-blc:hover{
     outline: 2px solid transparent;
     background-color: #f78cb6;
@@ -181,7 +186,10 @@ body{
     height: 307px;
     margin-bottom: 10px;
     cursor: pointer;
+    display: block;
 }
+
+
 .item-blc:hover .item-title{
     color: #fff;
 }
